--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,7 @@
 
 :root{
     --cabecalho: #52b7e6;
-    --cor-de-fundo: #0b5c5f;
+    --cor-de-fundo: #94d7da;
     --cor-de-texto: rgb(0, 0, 0);
     --cor-de-borda: rgb(0, 0, 0);
 }
