--- a/estilos.css
+++ b/estilos.css
@@ -24,6 +24,11 @@ header {
     color: var(--cor-de-texto);
 }
 
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+}
+
 main {
     padding: 20px;
     color: var(--cor-de-texto);
